# jlink-restful-cpp-demo

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.gitlab/issue_templates/: template.md
demo/: CMakeLists.txt  Demo.h  README.md  config.ini  main.cpp  mqttmessage.h  tools.cpp  tools.h
demo/Config/: imgui.ini
demo/Language/: language_cn.ini  language_en.ini
demo/Public/: OSString.cpp  OSString.h  OSTypes.h  XSDKTool.cpp  XSDKTool.h
demo/Source/: Demo.cpp  Demo.h  DeviceCapability.cpp  DeviceConf.cpp  DeviceInfo.cpp  DeviceStatuDemo.cpp  DeviceUseraccount.cpp  tools.cpp  tools.h
include/jlink-restful-cpp/: developer_info.h  jlink_client.h  jlink_developer.h  jlink_device.h  jlink_mqtt_subscriber.h  mqtt_conn_options.h  mqtt_listener.h  response.h
include/jlink-restful-cpp/message/: device_add_report_message.h  device_alarm_info_message.h  device_del_share_report_message.h  device_delect_report_message.h  device_family_group_del_report_message.h  device_invite_report_message.h  device_passthrough_message.h  device_report_message.h  device_reset_report_message.h  device_status_message.h  device_update_token_report_message.h  device_userdel_report_message.h  message.h
include/jlink-restful-cpp/request/: request.h
include/jlink-restful-cpp/request/PTZ_control/: device_direction_control_request.h  device_get_cruise_request.h  device_get_preset_conf_request.h  device_point_cruise_request.h  device_ptz_preset_request.h  device_zoom_focus_request.h
include/jlink-restful-cpp/request/device_control/: device_custom_protocol_request.h  device_log_query_request.h  device_open_close_trans_request.h  device_restart_shutdown_request.h  device_restore_factory_setting_request.h  device_storage_formatting_request.h  device_syn_system_time_query_resquest.h  device_syn_utc_request.h
include/jlink-restful-cpp/request/firmware_upgrade/: device_check_firmware_ver_request.h  device_upgrade_firmware_request.h
include/jlink-restful-cpp/request/media_server/: device_close_livestream_request.h  device_livestream_address_request.h  device_snap_request.h  device_talkback_request.h  device_videotalk_request.h
include/jlink-restful-cpp/request/set_device_conf/: device_set_camera_param_conf_request.h  device_set_chnnel_title_conf_request.h  device_set_external_ptz_conf_request.h  device_set_general_conf_request.h  device_set_net_basic_conf_request.h
include/jlink-restful-cpp/request/user_account/: developer_modify_pass_request.h  developer_modify_pass_unlogin_request.h  developer_phonereg_request.h  developer_send_captcha_request.h  developer_userlogin_request.h
include/jlink-restful-cpp/response/: device_list_response.h  null_response.h  response.h
include/jlink-restful-cpp/response/PTZcontrol/: device_direction_control_response.h  device_get_cruise_response.h  device_get_preset_conf_response.h  device_point_cruise_response.h  device_ptz_preset_response.h  device_zoom_focus_response.h
include/jlink-restful-cpp/response/add_device/: device_list_response.h  null_response.h
include/jlink-restful-cpp/response/ams_user/: user_info_response.h  user_login_response.h  user_modify_pass_unlog_response.h
include/jlink-restful-cpp/response/device_control/: device_restart_shutdown_response.h  device_restore_factory_setting_response.h  device_syn_system_time_response.h  device_syn_utc_response.h  device_system_time_query_response.h
include/jlink-restful-cpp/response/device_status/: device_alive_response.h  device_login_response.h  device_logout_response.h  device_status_response.h  device_systeminfo_response.h
include/jlink-restful-cpp/response/device_token_manager/: device_token_response.h
include/jlink-restful-cpp/response/firmware_upgrade/: device_check_firmware_versions_response.h  device_get_upgrade_progress_response.h  device_upgrade_firmware_response.h
include/jlink-restful-cpp/response/get_deviceinfo/: device_RTMP_all_info_response.h  device_get_4Ginfo_response.h
include/jlink-restful-cpp/response/get_systemability/: device_Intelligent_ability.h  device_blindcap_ability_response.h  (+6 more)
msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  jlink-restful-cpp.sln  jlink-restful-cpp.vcxproj  jlink-restful-cpp.vcxproj.filters
msvc/demo/: jlink-cpp-demo.vcxproj  jlink-cpp-demo.vcxproj.filters
msvc/jlink-restful-cpp-demo/: jlink-restful-cpp-demo.vcxproj  jlink-restful-cpp-demo.vcxproj.filters  jlink-restful-cpp.sln  jlink-restful-cpp.vcxproj  jlink-restful-cpp.vcxproj.filters
src/: CMakeLists.txt  const.h  jlink_client.cpp  jlink_developer.cpp  jlink_device.cpp  jlink_mqtt_subscriber.cpp  jlink_mqtt_subscriber_internal.cpp  jlink_mqtt_subscriber_internal.h  utils.cpp  utils.h
third/curl/lib/: libcurl_static.lib
third/json/: json.hpp
third/openssl/lib/: libssl_static.lib
(+45 files in other folders)
